Prepares for release by updating to Brave 5.18 (#207)
Note after we release, we should bump major when updating to
zipkin-reporter 3.0.1

Signed-off-by: Adrian Cole <adrian@tetrate.io>